spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
   width: 100%;
   padding: 2rem;
 }
+
+.spacer {
+  height: 800px;
+}
